# QEverCloud

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: build_and_deploy.yml  trigger_opensuse_build_service.yml
QEverCloud/: CMakeLists.txt
QEverCloud/cmake/modules/: QEverCloudCompilerSettings.cmake  QEverCloudConfig.cmake.in  QEverCloudSetupQt.cmake  QEverCloudUpdateTranslations.cmake
QEverCloud/headers/: AsyncResult.h  DurableService.h  EventLoopFinisher.h  EverCloudException.h  Exceptions.h  Export.h  Globals.h  Helpers.h  InkNoteImageDownloader.h  Log.h  OAuth.h  Optional.h  Printable.h  QEverCloud.h  QEverCloudOAuth.h  RequestContext.h  Thumbnail.h  VersionInfo.h.in
QEverCloud/src/: AsyncResult.cpp  AsyncResult_p.cpp  AsyncResult_p.h  CookieJar.h  DurableService.cpp  DurableService.h  EventLoopFinisher.cpp  EverCloudException.cpp  Exceptions.cpp  Globals.cpp  Http.cpp  Http.h  Impl.h  InkNoteImageDownloader.cpp  Log.cpp  NetworkCookieJar.cpp  NetworkCookieJar.h  OAuth.cpp  Printable.cpp  RequestContext.cpp  ServicesNonGenerated.cpp  Thrift.h  Thumbnail.cpp  globals.cpp
QEverCloud/src/oauth/: AbstractOAuthEngine.cpp  NetworkCookieJar.h  OAuthSystemBrowser.cpp  OAuthWebKit.cpp
QEverCloud/src/tests/: Common.cpp  Common.h  SocketHelpers.h  TestDurableService.cpp  TestDurableService.h  TestOptional.cpp  TestOptional.h  TestQEverCloud.cpp  TestQEverCloud.h
cmake/modules/: CMakeLists.txt  QEverCloudCompilerSettings.cmake  QEverCloudConfig.cmake.in  QEverCloudFindDependencies.cmake  QEverCloudUpdateTranslations.cmake
docs/: CodingStyle.md  Migration_notes_4_to_5.md
include/qevercloud/: AsyncResult.h  Constants.h  DurableService.h  EDAMErrorCode.h  EventLoopFinisher.h  EverCloudException.h  Exceptions.h  Export.h  Fwd.h  Globals.h  Helpers.h  IInkNoteImageDownloader.h  INoteThumbnailDownloader.h  IRequestContext.h  Initialization.h  InkNoteImageDownloader.h  LibraryType.h.in  Log.h  NetworkProxy.h  OAuth.h  Printable.h  QEverCloud.h  QEverCloudOAuth.h  RequestContext.h  RequestContextBuilder.h  Servers.h  Services.h  Thumbnail.h  Types.h  VersionInfo.h.in
include/qevercloud/exceptions/: All.h  EDAMInvalidContactsException.h  EDAMNotFoundException.h  EDAMSystemException.h  EDAMSystemExceptionAuthExpired.h  EDAMSystemExceptionRateLimitReached.h  EDAMUserException.h  EverCloudException.h  EvernoteException.h  Fwd.h  NetworkException.h  ThriftException.h
include/qevercloud/services/: All.h  Fwd.h  INoteStore.h  IUserStore.h  NoteStoreServer.h  UserStoreServer.h
include/qevercloud/types/: AccountLimits.h  Accounting.h  All.h  AuthenticationResult.h  BootstrapInfo.h  BootstrapProfile.h  BootstrapSettings.h  BusinessInvitation.h  BusinessNotebook.h  BusinessUserAttributes.h  BusinessUserInfo.h  CanMoveToContainerRestrictions.h  Contact.h  CreateOrUpdateNotebookSharesResult.h  Data.h  Fwd.h  Identity.h  InvitationShareRelationship.h  LazyMap.h  LinkedNotebook.h  ManageNoteSharesError.h  ManageNoteSharesParameters.h  ManageNoteSharesResult.h  ManageNotebookSharesError.h  ManageNotebookSharesParameters.h  (+53 more)
src/: AsyncResult.cpp  AsyncResult_p.cpp  AsyncResult_p.h  Constants.cpp  DurableService.cpp  EDAMErrorCode.cpp  EventLoopFinisher.cpp  EverCloudException.cpp  Exceptions.cpp  Future.h  Globals.cpp  Http.cpp  Http.h  HttpRequestParser.cpp  IInkNoteImageDownloader.cpp  INoteThumbnailDownloader.cpp  IRequestContext.cpp  Impl.cpp  Impl.h  Initialization.cpp  InkNoteImageDownloader.cpp  InkNoteImageDownloader.h  Log.cpp  NetworkCookieJar.cpp  NetworkCookieJar.h  NetworkProxy.cpp  NetworkReplyFetcher.cpp  NetworkReplyFetcher.h  NoteThumbnailDownloader.cpp  NoteThumbnailDownloader.h  OAuth.cpp  Printable.cpp  Qt5FutureHelpers.h  Qt5Promise.h  QtFutureContinuations.h  RequestContext.cpp  RequestContext.h  RequestContextBuilder.cpp  Servers.cpp  Services.cpp  (+5 more)
src/exceptions/: EDAMInvalidContactsException.cpp  EDAMNotFoundException.cpp  EDAMSystemException.cpp  EDAMSystemExceptionAuthExpired.cpp  EDAMSystemExceptionRateLimitReached.cpp  EDAMUserException.cpp  EverCloudException.cpp  EvernoteException.cpp  NetworkException.cpp  ThriftException.cpp
src/oauth/: AbstractOAuthEngine.cpp  AbstractOAuthEngine.h  NetworkCookieJar.h  NonceGenerator.cpp  OAuth.cpp  OAuthSystemBrowser.cpp  OAuthSystemBrowser.h  OAuthWebEngine.cpp  OAuthWebEngine.h  OAuthWebKit.cpp  OAuthWebKit.h
src/services/: NoteStore.cpp  NoteStoreServer.cpp  UserStore.cpp  UserStoreServer.cpp
src/types/: AccountLimits.cpp  Accounting.cpp  AuthenticationResult.cpp  BootstrapInfo.cpp  BootstrapProfile.cpp  BootstrapSettings.cpp  BusinessInvitation.cpp  BusinessNotebook.cpp  BusinessUserAttributes.cpp  BusinessUserInfo.cpp  CanMoveToContainerRestrictions.cpp  Contact.cpp  CreateOrUpdateNotebookSharesResult.cpp  Data.cpp  Identity.cpp  InvitationShareRelationship.cpp  LazyMap.cpp  LinkedNotebook.cpp  ManageNoteSharesError.cpp  ManageNoteSharesParameters.cpp  ManageNoteSharesResult.cpp  ManageNotebookSharesError.cpp  ManageNotebookSharesParameters.cpp  ManageNotebookSharesResult.cpp  MemberShareRelationship.cpp  Metatypes.cpp  Note.cpp  NoteAttributes.cpp  NoteCollectionCounts.cpp  NoteEmailParameters.cpp  NoteFilter.cpp  NoteInvitationShareRelationship.cpp  NoteLimits.cpp  NoteList.cpp  NoteMemberShareRelationship.cpp  NoteMetadata.cpp  NoteRestrictions.cpp  NoteResultSpec.cpp  NoteShareRelationshipRestrictions.cpp  NoteShareRelationships.cpp  (+37 more)
tests/: ClearLocalFields.cpp  ClearLocalFields.h  ClearLocalIds.cpp  ClearLocalIds.h  InkNoteImageDownloaderTester.cpp  InkNoteImageDownloaderTester.h  NoteThumbnailDownloaderTester.cpp  NoteThumbnailDownloaderTester.h  RandomDataGenerators.cpp  RandomDataGenerators.h  SocketHelpers.cpp  SocketHelpers.h  TestDurableService.cpp  TestNoteStore.cpp  TestNoteStore.h  TestQEverCloud.cpp  TestSerializationJson.cpp  TestSerializationJson.h  TestTypeBuilders.cpp  TestTypeBuilders.h  TestUserStore.cpp  TestUserStore.h  stripes.qrc
tests/resources/: stripes.qrc
tests/services/: TestNoteStore.cpp  TestNoteStore.h  TestUserStore.cpp  TestUserStore.h
(+474 files in other folders)
